--- a/default-config/common/install
+++ b/default-config/common/install
@@ -59,13 +59,15 @@ for script in "${DOTFILES_DIR}"/custom-config/**/install; do
   ${script}
 done
 
-printf "Setting up git...\\n"
+if type -p git >/dev/null; then
+  printf "Setting up git...\\n"
 
-default_name=$(git config --global user.name)
-default_email=$(git config --global user.email)
+  default_name=$(git config --global user.name)
+  default_email=$(git config --global user.email)
 
-read -rp "Name [$default_name]: " name
-read -rp "Email [$default_email]: " email
+  read -rp "Name [$default_name]: " name
+  read -rp "Email [$default_email]: " email
 
-git config --global user.name "${name:-$default_name}"
-git config --global user.email "${email:-$default_email}"
+  git config --global user.name "${name:-$default_name}"
+  git config --global user.email "${email:-$default_email}"
+fi
