--- a/common/config/polybar/install
+++ b/common/config/polybar/install
@@ -3,20 +3,5 @@
 SOURCE_DIR="$(realpath "$(dirname "$0")")"
 XDG_CONFIG_HOME="${XDG_CONFIG_HOME:-"${HOME}"/.config}"
 
-rm -rf "${XDG_CONFIG_HOME}"/polybar/modules > /dev/null 2>&1
-rm -rf "${XDG_CONFIG_HOME}"/polybar/polybars > /dev/null 2>&1
-rm -rf "${XDG_CONFIG_HOME}"/polybar/config.ini > /dev/null 2>&1
-rm -rf "${XDG_CONFIG_HOME}"/polybar/launch > /dev/null 2>&1
-rm -rf "${XDG_CONFIG_HOME}"/polybar/master.conf > /dev/null 2>&1
-rm -rf "${XDG_CONFIG_HOME}"/polybar/modules.conf > /dev/null 2>&1
-rm -rf "${XDG_CONFIG_HOME}"/polybar/.env.sh> /dev/null 2>&1
-
-mkdir "${XDG_CONFIG_HOME}"/polybar > /dev/null 2>&1
-
-ln -sf "${SOURCE_DIR}"/modules "${XDG_CONFIG_HOME}"/polybar/modules
-ln -sf "${SOURCE_DIR}"/polybars "${XDG_CONFIG_HOME}"/polybar/polybars
-ln -sf "${SOURCE_DIR}"/config.ini "${XDG_CONFIG_HOME}"/polybar/config.ini
-ln -sf "${SOURCE_DIR}"/launch "${XDG_CONFIG_HOME}"/polybar/launch
-ln -sf "${SOURCE_DIR}"/master.conf "${XDG_CONFIG_HOME}"/polybar/master.conf
-ln -sf "${SOURCE_DIR}"/modules.conf "${XDG_CONFIG_HOME}"/polybar/modules.conf
-ln -sf "${SOURCE_DIR}"/.env.sh "${XDG_CONFIG_HOME}"/polybar/.env.sh
+rm -rf "${XDG_CONFIG_HOME}"/polybar >/dev/null 2>&1
+ln -sf "${SOURCE_DIR}" "${XDG_CONFIG_HOME}"/polybar
