--- a/common/config/zsh/install
+++ b/common/config/zsh/install
@@ -6,15 +6,11 @@ rm -rf ~/.zshrc > /dev/null 2>&1
 rm -rf ~/.zsh_prompt > /dev/null 2>&1
 rm -rf ~/.zsh_aliases > /dev/null 2>&1
 
+mkdir -p ~/.zsh/custom
+
 ln -sf "${SOURCE_DIR}"/zshrc ~/.zshrc
 ln -sf "${SOURCE_DIR}"/zsh_prompt ~/.zsh_prompt
 ln -sf "${SOURCE_DIR}"/zsh_aliases ~/.zsh_aliases
-
-# link files that match "${SOURCE_DIR}"/custom/*.zsh to ~/.zsh/custom
-mkdir -p ~/.zsh/custom
-shopt -s nullglob
-for file in "${SOURCE_DIR}"/custom/*.zsh; do
-    ln -sf "${file}" ~/.zsh/custom/
-done
+ln -sf "${SOURCE_DIR}"/custom ~/.zsh/custom
 
 sudo chsh -s /usr/bin/zsh
