--- a/install
+++ b/install
@@ -7,28 +7,28 @@ PKGNAME=${PKGNAME:-"dots"}
 # creates variable `os`
 . "${ROOT}"/util/os.sh
 
-rm -rf "${DESTDIR}/opt/${PKGNAME}" \
-    "${DESTDIR}/usr/bin/dots" \
-    "${DESTDIR}/usr/share/licenses/${PKGNAME}/" \
-    "${DESTDIR}/usr/share/doc/${PKGNAME}/"
+rm -rf "${PKGDIR}/opt/${PKGNAME}" \
+    "${PKGDIR}/usr/bin/dots" \
+    "${PKGDIR}/usr/share/licenses/${PKGNAME}/" \
+    "${PKGDIR}/usr/share/doc/${PKGNAME}/"
 
-install -d "${DESTDIR}/opt/${PKGNAME}"
+install -d "${PKGDIR}/opt/${PKGNAME}"
 
 for dirname in common "${os}" ui util; do
-    cp -Rf "${ROOT}"/"${dirname}" "${DESTDIR}/opt/${PKGNAME}"
+    cp -Rf "${ROOT}"/"${dirname}" "${PKGDIR}/opt/${PKGNAME}"
 done
 
-install -Dm644 "${ROOT}"/LICENSE -t "${DESTDIR}/usr/share/licenses/${PKGNAME}/"
-install -Dm644 "${ROOT}"/README.md -t "${DESTDIR}/usr/share/doc/${PKGNAME}/"
-install -Dm755 "${ROOT}"/dots -t "${DESTDIR}/opt/${PKGNAME}/"
+install -Dm644 "${ROOT}"/LICENSE -t "${PKGDIR}/usr/share/licenses/${PKGNAME}/"
+install -Dm644 "${ROOT}"/README.md -t "${PKGDIR}/usr/share/doc/${PKGNAME}/"
+install -Dm755 "${ROOT}"/dots -t "${PKGDIR}/opt/${PKGNAME}/"
 
-mkdir -p "${DESTDIR}"/usr/bin
+mkdir -p "${PKGDIR}"/usr/bin
 
-# Create dots binary at ${DESTDIR}/usr/bin/${PKGNAME} to wrap the file at ${DESTDIR}/opt/${PKGNAME}/dots
-cat > "${DESTDIR}"/usr/bin/"${PKGNAME}" <<EOF
+# Create dots binary at ${PKGDIR}/usr/bin/${PKGNAME} to wrap the file at ${PKGDIR}/opt/${PKGNAME}/dots
+cat > "${PKGDIR}"/usr/bin/"${PKGNAME}" <<EOF
 #!/usr/bin/env sh
 
-${DESTDIR}/opt/${PKGNAME}/dots "\$@"
+${PKGDIR}/opt/${PKGNAME}/dots "\$@"
 EOF
 
-chmod +x "${DESTDIR}/usr/bin/${PKGNAME}"
+chmod +x "${PKGDIR}/usr/bin/${PKGNAME}"
