--- a/docs/i3.md
+++ b/docs/i3.md
@@ -1,4 +1,4 @@
-The `i3-wm` configuration is located at `~/.config/i3/config`, which is a symbolic link to the file `<dotfiles_dir>/config/i3/config`. This file contains the actual configuration for `i3-wm`, and you have complete freedom to customize it according to your preferences.
+The `i3-wm` configuration is located at `~/.config/i3/config`. This file contains the actual configuration for `i3-wm`, and you have complete freedom to customize it according to your preferences.
 
 To understand the different options available for customization, you can refer to the [i3 User Guide](https://i3wm.org/docs/userguide.html), which provides detailed documentation on various aspects of the i3 window manager.
 
