--- a/docs/i3.md
+++ b/docs/i3.md
@@ -1,4 +1,12 @@
-The `i3-wm` configuration is located at `~/.config/i3/config`. This file contains the actual configuration for `i3-wm`, and you have complete freedom to customize it according to your preferences.
+The `i3-wm` configuration is located at `~/.config/i3`. This file contains the actual configuration for `i3-wm`, and you have complete freedom to customize it according to your preferences.
+
+To edit the `i3-wm` configuration, you need to run the following command:
+
+```sh
+chezmoi edit ~/.config/i3
+```
+
+Remember to apply your changes using `chezmoi apply` and restart `i3-wm` for the modifications to take effect.
 
 To understand the different options available for customization, you can refer to the [i3 User Guide](https://i3wm.org/docs/userguide.html), which provides detailed documentation on various aspects of the i3 window manager.
 
@@ -13,18 +21,18 @@ We have predefined some keybindings in the i3 configuration to enhance your work
 | Key                   | Action                                                                                                  |
 | --------------------- | ------------------------------------------------------------------------------------------------------- |
 | `$Mod+Shift+q`        | Kill the current window                                                                                  |
-| `Mod1+F1`             | Open the application launcher using the `dots-scripts rofi-run -r` command                               |
-| `$Mod+x`              | Open the exit menu using the `dots-scripts rofi-run -l` command                                          |
-| `$Mod+Control+p`      | Open/close the polybar menus using the `dots-scripts toggle -p -t &` command                            |
+| `Mod1+F1`             | Open the application launcher using the `dots rofi-run -r` command                               |
+| `$Mod+x`              | Open the exit menu using the `dots rofi-run -l` command                                          |
+| `$Mod+Control+p`      | Open/close the polybar menus using the `dots toggle -p -t &` command                            |
 | `$Mod+w`              | Open the default web browser using the `exo-open --launch WebBrowser` command                           |
 | `$Mod+f`              | Open the default file manager using the `exo-open --launch FileManager` command                         |
 | `$Mod+t` or `$Mod+Return` | Open the default terminal emulator using the `exo-open --launch TerminalEmulator` command          |
-| `XF86MonBrightnessUp` | Increase the brightness by 10% using the `dots-scripts brightness "*" + 0.1` command                    |
-| `XF86MonBrightnessDown` | Decrease the brightness by 10% using the `dots-scripts brightness "*" - 0.1` command                  |
-| `Shift+XF86MonBrightnessUp` | Increase the brightness by 1% using the `dots-scripts brightness "*" + 0.01` command                 |
-| `Shift+XF86MonBrightnessDown` | Decrease the brightness by 1% using the `dots-scripts brightness "*" - 0.01` command               |
-| `Print`               | Open the default screenshot tool using the `dots-scripts screenshooter` command                        |
-| `Shift+Print`         | Take a screenshot of a region using the `dots-scripts screenshooter -r` command                        |
+| `XF86MonBrightnessUp` | Increase the brightness by 10% using the `dots brightness "*" + 0.1` command                    |
+| `XF86MonBrightnessDown` | Decrease the brightness by 10% using the `dots brightness "*" - 0.1` command                  |
+| `Shift+XF86MonBrightnessUp` | Increase the brightness by 1% using the `dots brightness "*" + 0.01` command                 |
+| `Shift+XF86MonBrightnessDown` | Decrease the brightness by 1% using the `dots brightness "*" - 0.01` command               |
+| `Print`               | Open the default screenshot tool using the `dots screenshooter` command                        |
+| `Shift+Print`         | Take a screenshot of a region using the `dots screenshooter -r` command                        |
 | `XF86AudioPlay`       | Play/pause the current song using the `playerctl play-pause` command                                    |
 | `XF86AudioNext`       | Play the next song using the `playerctl next` command                                                    |
 | `XF86AudioPrev`       | Play the previous song using the `playerctl previous` command                                            |
