Update chezmoi commands to include source flag

--- a/docs/i3.md
+++ b/docs/i3.md
@@ -3,7 +3,7 @@ The `i3-wm` configuration is located at `~/.config/i3`. This file contains the a
 To edit the `i3-wm` configuration, you need to run the following command:
 
 ```sh
-chezmoi edit ~/.config/i3
+chezmoi edit ~/.config/i3 --source ~/.dotfiles
 ```
 
 Remember to apply your changes using `chezmoi apply` and restart `i3-wm` for the modifications to take effect.
