--- a/docs/i3.md
+++ b/docs/i3.md
@@ -22,7 +22,8 @@ We have predefined some keybindings in the i3 configuration to enhance your work
 | ----------------------------- | ----------------------------------------------------------------------------------------- |
 | `$Mod+Shift+q`                | Kill the current window                                                                   |
 | `Mod1+F1`                     | Open the application launcher using the `dots rofi-run -r` command                        |
-| `$Mod+x`                      | Open the exit menu using the `dots rofi-run -l` command                                   |
+| `$Mod+d`                      | Open the eww dashboard using the `~/.config/eww/dashboard/launch.sh` command              |
+| `$Mod+x`                      | Open the exit menu using the `~/.config/eww/powermenu/launch.sh` command                  |
 | `$Mod+Control+p`              | Open/close the polybar menus using the `dots toggle -p -t &` command                      |
 | `$Mod+w`                      | Open the default web browser using the `exo-open --launch WebBrowser` command             |
 | `$Mod+f`                      | Open the default file manager using the `exo-open --launch FileManager` command           |
