--- a/docs/i3.md
+++ b/docs/i3.md
@@ -1,49 +1,106 @@
-The `i3-wm` configuration is located at `~/.config/i3`. This file contains the actual configuration for `i3-wm`, and you have complete freedom to customize it according to your preferences.
+# 🧱 i3 Window Manager Guide
 
-To edit the `i3-wm` configuration, you need to run the following command:
+i3 is a **tiling window manager** built to provide an efficient and highly customizable user experience. It allows you to manage your windows using simple keyboard shortcuts and scripting tools.
+
+> [!TIP]
+> The i3 setup in this dotfiles project is fully configurable. You can personalize layouts, autostart programs, keybindings, and integrations with other tools like Polybar, Rofi, or EWW.
+
+---
+
+## 📁 Configuration Files Location
+
+All i3-related configurations live in:
+
+```sh
+~/.config/i3
+```
+
+To edit using chezmoi:
 
 ```sh
 chezmoi edit ~/.config/i3 --source ~/.dotfiles
 ```
 
-Remember to apply your changes using `chezmoi apply` and restart `i3-wm` for the modifications to take effect.
+Apply changes:
 
-To understand the different options available for customization, you can refer to the [i3 User Guide](https://i3wm.org/docs/userguide.html), which provides detailed documentation on various aspects of the i3 window manager.
+```sh
+chezmoi apply
+```
 
-## Autostart Applications
+After editing, restart i3 (`Mod+Shift+r`) to reload the configuration.
 
-In the dotfiles installation, we have included a list of applications that are automatically started when the i3 session begins. You can find this list in the `~/.config/i3/autostart.sh` file. Feel free to modify this file to add or remove applications based on your requirements.
+📖 Official documentation: [i3 User Guide](https://i3wm.org/docs/userguide.html)
 
-## i3 Keybindings
+---
 
-We have predefined some keybindings in the i3 configuration to enhance your workflow. These keybindings are designed to be intuitive and efficient. Here are some of the keybindings we have set:
+## 🚀 Autostart Applications
 
-| Key                           | Action                                                                                    |
-| ----------------------------- | ----------------------------------------------------------------------------------------- |
-| `$Mod+Shift+q`                | Kill the current window                                                                   |
-| `Mod1+F1`                     | Open the application launcher using the `dots rofi-run -r` command                        |
-| `$Mod+d`                      | Open the eww dashboard using the `~/.config/eww/dashboard/launch.sh` command              |
-| `$Mod+x`                      | Open the exit menu using the `~/.config/eww/powermenu/launch.sh` command                  |
-| `$Mod+Control+p`              | Open/close the polybar menus using the `dots toggle -p -t &` command                      |
-| `$Mod+w`                      | Open the default web browser using the `exo-open --launch WebBrowser` command             |
-| `$Mod+f`                      | Open the default file manager using the `exo-open --launch FileManager` command           |
-| `$Mod+t` or `$Mod+Return`     | Open the default terminal emulator using the `exo-open --launch TerminalEmulator` command |
-| `XF86MonBrightnessUp`         | Increase the brightness by 10% using the `dots brightness "*" + 0.1` command              |
-| `XF86MonBrightnessDown`       | Decrease the brightness by 10% using the `dots brightness "*" - 0.1` command              |
-| `Shift+XF86MonBrightnessUp`   | Increase the brightness by 1% using the `dots brightness "*" + 0.01` command              |
-| `Shift+XF86MonBrightnessDown` | Decrease the brightness by 1% using the `dots brightness "*" - 0.01` command              |
-| `Print`                       | Open the default screenshot tool using the `dots screenshooter` command                   |
-| `Shift+Print`                 | Take a screenshot of a region using the `dots screenshooter -r` command                   |
-| `XF86AudioPlay`               | Play/pause the current song using the `playerctl play-pause` command                      |
-| `XF86AudioNext`               | Play the next song using the `playerctl next` command                                     |
-| `XF86AudioPrev`               | Play the previous song using the `playerctl previous` command                             |
-| `XF86AudioStop`               | Stop the current song using the `playerctl stop` command                                  |
-| `XF86AudioMute`               | Mute/unmute the current song using the `pamixer -t` command                               |
-| `XF86AudioRaiseVolume`        | Increase the volume by 1% using the `pamixer -i 1` command                                |
-| `XF86AudioLowerVolume`        | Decrease the volume by 1% using the `pamixer -d 1` command                                |
+Autostart programs are defined in:
 
-These keybindings are designed to improve your productivity and streamline your interaction with i3. However, you are free to modify or add additional keybindings as per your preferences.
+```sh
+~/.config/i3/autostart.sh
+```
 
-🔍 If you want more details or need further customization options, please refer to the i3 User Guide and explore the vast possibilities of customizing i3 according to your needs.
+This script runs when the i3 session starts. You can add anything here:
 
-Enjoy the power and flexibility of i3, and personalize it to create your ideal window manager environment!
+```sh
+picom --experimental-backends &
+feh --bg-scale ~/wallpapers/mywall.jpg &
+```
+
+Make sure the script is executable:
+
+```sh
+chmod +x ~/.config/i3/autostart.sh
+```
+
+---
+
+## ⌨️ i3 Keybindings
+
+We’ve predefined a set of intuitive keybindings in your `i3/config` file to help you get productive fast. You can modify or extend them as needed.
+
+### 🔑 Default Keybindings
+
+| Key                           | Action                                                                                     |
+|------------------------------|--------------------------------------------------------------------------------------------|
+| `$Mod+Shift+q`               | Kill the current window                                                                    |
+| `Mod1+F1`                    | Launch Rofi using `dots rofi-run -r`                                                       |
+| `$Mod+d`                     | Launch EWW dashboard (`~/.config/eww/dashboard/launch.sh`)                                |
+| `$Mod+x`                     | Launch EWW power menu (`~/.config/eww/powermenu/launch.sh`)                               |
+| `$Mod+Ctrl+p`                | Toggle Polybar menus (`dots toggle -p -t &`)                                               |
+| `$Mod+w`                     | Launch default browser (`exo-open --launch WebBrowser`)                                   |
+| `$Mod+f`                     | Launch file manager (`exo-open --launch FileManager`)                                     |
+| `$Mod+t` or `$Mod+Return`    | Launch terminal (`exo-open --launch TerminalEmulator`)                                    |
+| `XF86MonBrightnessUp`        | Brightness +10% (`dots brightness "*" + 0.1`)                                              |
+| `XF86MonBrightnessDown`      | Brightness -10% (`dots brightness "*" - 0.1`)                                              |
+| `Shift+XF86MonBrightnessUp`  | Brightness +1% (`dots brightness "*" + 0.01`)                                              |
+| `Shift+XF86MonBrightnessDown`| Brightness -1% (`dots brightness "*" - 0.01`)                                              |
+| `Print`                      | Screenshot tool (`dots screenshooter`)                                                    |
+| `Shift+Print`                | Screenshot region (`dots screenshooter -r`)                                                |
+| `XF86AudioPlay`              | Play/Pause music (`playerctl play-pause`)                                                 |
+| `XF86AudioNext`              | Next track (`playerctl next`)                                                             |
+| `XF86AudioPrev`              | Previous track (`playerctl previous`)                                                     |
+| `XF86AudioStop`              | Stop music (`playerctl stop`)                                                             |
+| `XF86AudioMute`              | Toggle mute (`pamixer -t`)                                                                |
+| `XF86AudioRaiseVolume`       | Volume up +1% (`pamixer -i 1`)                                                             |
+| `XF86AudioLowerVolume`       | Volume down -1% (`pamixer -d 1`)                                                           |
+
+---
+
+## 🧠 Customization Tips
+
+- Mix i3 with **Polybar**, **Rofi**, **EWW**, or **Picom** for a complete and modern setup
+- Use workspace-specific rules and gaps for better layout control
+- Define window-specific behavior (e.g., floating, no border)
+
+> 🧪 Experiment with changes in a testing environment before applying them to your main config
+
+---
+
+## 🆘 Need Help?
+
+- [i3 User Guide](https://i3wm.org/docs/userguide.html)
+- [Dotfiles Discussions](https://github.com/ulises-jeremias/dotfiles/discussions)
+
+Enjoy the power and flexibility of i3, and build your ideal window management experience! 💻✨
